--- a/Task4/Task4/Views/Home/Index.cshtml
+++ b/Task4/Task4/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 </div>
 
 <script type="text/javascript">
-    fetch("home/getsocialnetworksinfo")
+    fetch("home/getsocialnetworks")
         .then(response => response.json())
         .then(json => createSocialNetworkChart(json));
 </script>
