Task4 v4.0 (users: delete, block, unblock)

--- a/Task4/Task4/Views/Home/Index.cshtml
+++ b/Task4/Task4/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-header">
-                Общее число пользователей сайта из каждой соцсети
+                Total number of site users from each social network
             </div>
             <div class="card-body">
                 <canvas class="my-4 h-25" id="pie"></canvas>
