--- a/Task4/Task4/Views/Users/Index.cshtml
+++ b/Task4/Task4/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<User>
+﻿@model IndexViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -13,30 +13,63 @@
 </script>
 
 <div class="text-center">
-    <div class="py-3 d-flex justify-content-md-start">
+    <div class="py-3 d-flex justify-content-between">
         <form id="mainform" method="post">
             <button asp-controller="Users" asp-action="Block" type="submit" class="btn btn-primary">Block</button>
             <button asp-controller="Users" asp-action="Unblock" type="submit" class="btn btn-primary">Unblock</button>
             <button asp-controller="Users" asp-action="Delete" type="submit" class="btn btn-danger">Delete</button>
         </form>
+        <form method="get">
+            <div class="form-inline form-group">
+                <label class="control-label">Social networks: </label>
+                <select name="socialNetwork" asp-items="Model.FilterViewModel.SocialNetworks" class="form-control"></select>
+                <label class="control-label">Statuses: </label>
+                <select name="status" asp-items="null" class="form-control"></select>
+                <input type="submit" value="Filter" class="btn btn-default" />
+            </div>
+        </form>
     </div>
 
-    <table class="table table-striped">
+    <table class="table table-responsive table-striped">
         <thead>
             <tr class="text-center">
                 <th scope="col">
                     <input type="checkbox" id="maincheckbox" onclick="SelectAll()">
                 </th>
-                <th scope="col">Id</th>
-                <th scope="col">Email</th>
-                <th scope="col">Social network</th>
-                <th scope="col">Registration date</th>
-                <th scope="col">Last login date</th>
-                <th scope="col">Blocked</th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.IdSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Id</a>
+                </th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.EmailSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Email</a>
+                </th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.SocialNetworkSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Social network</a>
+                </th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.RegDateSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Registration date</a>
+                </th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.LoginDateSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Last login date</a>
+                </th>
+                <th scope="col">
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@(Model.SortViewModel.BlockedSort)"
+                       asp-route-socialNetwork="@(Model.FilterViewModel.SelectedSocialNetwork)">Blocked</a>
+                </th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var user in Model)
+            @foreach (var user in Model.Users)
             {
                 <tr>
                     <td><input type="checkbox" id="@user.Id" form="mainform" value="@user.Id" name="selectedUsers"></td>
